@@ -1,18 +1,0 @@
-name             = Padre-Plugin-JavaScript
-author           = Fayland Lam <fayland@gmail.com>
-author           = Adam Kennedy <adamk@cpan.org>
-author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
-license          = Perl_5
-version          = 0.29
-copyright_holder = Fayland Lam
-
-[@PadrePlugin]
-
-homepage         = http://padre.perlide.org
-repository       = http://svn.perlide.org/padre/trunk/Padre-Plugin-JavaScript/
-
-[Prereqs]
-Exporter                 = 0
-JavaScript::Beautifier   = 0.03
-JavaScript::Minifier::XS = 0
-JE                       = 0
