@@ -1,0 +1,10 @@
+
+use v5.8.7;
+use strict;
+use warnings;
+
+use Test::More;
+
+plan tests => 1;
+
+use_ok('Padre::Plugin::JavaScript');
